# discovery-mb2

./: .gitignore  404.html  Cargo.toml  DOWNLOAD.html  LICENSE-APACHE  LICENSE-CC-BY  LICENSE-MIT  README.md  Rust Embedded MB2 Discovery Book.epub  explore.html  index.html  print.html  rechapter.py  reworkspace.py  searcher-c2a407aa.js  searchindex-07608478.js  searchindex-171d2eb7.js  searchindex-27368d8c.js  searchindex-6bb3433f.js  searchindex-7a10b3d2.js  searchindex-ec6bf1f4.js  searchindex.js  searchindex.json  toc-e3a96842.js  toc.html  toc.js
01-background/: index.html
02-requirements/: index.html
03-setup/: Cargo.toml  IDE.html  index.html  linux.html  macos.html  verify.html  windows.html
03-setup/src/: main.rs
04-meet-your-hardware/: index.html  microbit-v2.html  terminology.html
05-meet-your-software/: Cargo.toml  build-it.html  debug-it.html  embedded-setup.html  flash-it.html  index.html  light-it-up.html
05-meet-your-software/examples/: delay-print.rs  init.rs
05-meet-your-software/src/: main.rs
06-hello-world/: Cargo.toml  board-support-crate.html  index.html  nanoblinky.rs  nop.html  portability.html  spin-wait.html  timers.html  toggle-it.html
07-led-roulette/: Cargo.toml  index.html  my-solution.html  the-challenge.html
07-registers/: bad-address.html  index.html  misoptimization.html  rtrm.html  spooky-action-at-a-distance.html  type-safe-manipulation.html
08-inputs-and-outputs/: Cargo.toml  index.html  my-solution.html  polling-sucks.html  polling.html  the-challenge.html
08-led-roulette/: index.html  my-solution.html  the-challenge.html
09-registers/: Cargo.toml  bad-address.html  index.html  misoptimization.html  rtrm.html  spooky-action-at-a-distance.html  type-safe-manipulation.html
09-registers/examples/: bad.rs  spooky.rs  type-safe.rs  volatile.rs
09-registers/src/: lib.rs  main.rs
09-serial-communication/: index.html  nix-tooling.html  windows-tooling.html
10-serial-communication/: index.html  nix-tooling.html  windows-tooling.html
10-serial-port/: index.html  nix-tooling.html  rs-232.html  windows-tooling.html
10-uart/: Cargo.toml  echo-server.html  index.html  my-solution.html  naive-approach-write.html  receive-a-single-byte.html  reverse-a-string.html  send-a-single-byte.html  send-a-string.html
11-i2c/: index.html  lsm303agr.html  my-solution.html  read-a-single-register.html  (+3 more)
11-uart/: Cargo.toml  echo-server.html  index.html  my-solution.html  naive-approach-write.html  receive-a-single-byte.html  reverse-a-string.html  send-a-single-byte.html  send-a-string.html
11-uart/examples/: send-byte.rs
11-uart/src/: main.rs
12-i2c/: Cargo.toml  index.html  lsm303agr.html  my-solution.html  read-a-single-register.html  the-challenge.html  the-general-protocol.html  using-a-driver.html
12-i2c/examples/: chip-id.rs
12-i2c/src/: main.rs
mdbook/src/03-setup/: Cargo.toml  Embed.toml  IDE.md  README.md  linux.md  macos.md  memory.x  verify.md  windows.md
mdbook/src/03-setup/src/: main.rs
mdbook/src/05-led-roulette/: Cargo.toml  README.md  build-it.md  debug-it.md  flash-it.md  it-blinks.md  light-it-up.md  my-solution.md  the-challenge.md
mdbook/src/05-led-roulette/examples/: blinky.rs  delay-print.rs  light-it-all.rs  light-it-up.rs
mdbook/src/05-led-roulette/src/: main.rs
mdbook/src/05-meet-your-software/: Cargo.toml  README.md  build-it.md  debug-it.md  embedded-setup.md  flash-it.md  light-it-up.md
mdbook/src/05-meet-your-software/examples/: delay-print.rs
mdbook/src/07-registers/: Cargo.toml  README.md  bad-address.md  misoptimization.md  optimization.md  rtrm.md  type-safe-manipulation.md
mdbook/src/07-registers/auxiliary/: Cargo.toml
mdbook/src/07-registers/src/: main.rs
mdbook/src/08-i2c/: Cargo.toml  README.md  my-solution.md  read-a-single-register.md  using-a-driver.md
mdbook/src/08-i2c/examples/: chip-id.rs  show-accel.rs
mdbook/src/08-i2c/src/: main.rs
mdbook/src/09-clocks-and-timers/auxiliary/: Cargo.toml
mdbook/src/09-registers/: Cargo.toml  README.md  bad-address.md  misoptimization.md  rtrm.md  spooky-action-at-a-distance.md  type-safe-manipulation.md
mdbook/src/09-registers/examples/: bad.rs  type-safe.rs  volatile.rs
mdbook/src/11-i2c/: Cargo.toml  README.md  the-challenge.md  the-general-protocol.md
mdbook/src/11-i2c/src/: main.rs
mdbook/src/11-uart/: Cargo.toml  README.md  my-solution.md  receive-a-single-byte.md  reverse-a-string.md  send-a-single-byte.md
mdbook/src/11-uart/examples/: naive-send-string.rs  receive-byte.rs  send-string.rs
mdbook/src/11-uart/src/: main.rs
mdbook/src/13-led-compass/: Cargo.toml  README.md  magnitude.md  the-challenge.md
mdbook/src/13-led-compass/examples/: magnitude.rs  show-mag.rs
mdbook/src/13-punch-o-meter/: Cargo.toml
mdbook/src/14-interrupts/: Cargo.toml  README.md  debouncing.md  sharing-data-with-globals.md  under-the-hood.md
mdbook/src/14-interrupts/examples/: count-debounce.rs  count-once.rs  count-up.rs  count.rs  poke.rs  pokier.rs  timer.rs
mdbook/src/14-punch-o-meter/: Cargo.toml  README.md  gravity-is-up.md  the-challenge.md
mdbook/src/14-punch-o-meter/examples/: show-accel.rs
mdbook/src/14-snake-game/: Cargo.toml
mdbook/src/14-snake-game/.cargo/: config.toml
mdbook/src/14-snake-game/src/: game.rs
mdbook/src/15-interrupts/: Cargo.toml  README.md  addendum-pwm.md  debouncing.md  my-solution.md  nvic-and-interrupt-priority.md  sharing-data-with-globals.md  the-challenge.md  the-mb2-speaker.md  turn-signaller-revisited.md  waiting-for-an-interrupt.md  waiting-to-be-interrupted.md
mdbook/src/15-interrupts/examples/: count-bounce.rs  count-once.rs  count.rs  poke-hacked.rs  poke.rs
mdbook/src/16-snake-game/: Cargo.toml  README.md  controls.md  final-assembly.md  game-logic.md  nonblocking-display.md
mdbook/src/16-snake-game/src/: controls.rs  game.rs
mdbook/src/16-snake-game/src/controls/: init.rs
mdbook/src/16-snake-game/src/game/: coords.rs
mdbook/src/appendix/3-mag-calibration/: Cargo.toml  README.md
mdbook/src/appendix/3-mag-calibration/src/: lib.rs  main.rs
(+251 files in other folders)
