[workspace]
resolver = "2"
members = [
  "mdbook/src/03-setup",
  "mdbook/src/05-hello-world",
  "mdbook/src/07-registers",
  "mdbook/src/05-led-roulette",
  "mdbook/src/09-uart",
  "mdbook/src/10-i2c",
  "mdbook/src/11-led-compass",
  "mdbook/src/12-punch-o-meter",
  "mdbook/src/13-snake-game",
  "mdbook/src/appendix/3-mag-calibration",
  "mdbook/src/serial-setup",
]

[profile.release]
codegen-units = 1
debug = true
lto = true
