[workspace]
resolver = "2"
members = [
  "mdbook/src/03-setup",
  "mdbook/src/05-meet-your-software",
  "mdbook/src/06-hello-world",
  "mdbook/src/07-registers",
  "mdbook/src/08-led-roulette",
  "mdbook/src/10-uart",
  "mdbook/src/11-i2c",
  "mdbook/src/12-led-compass",
  "mdbook/src/13-punch-o-meter",
  "mdbook/src/14-interrupts",
  "mdbook/src/14-snake-game",
  "mdbook/src/appendix/3-mag-calibration",
  "mdbook/src/serial-setup",
]

[profile.release]
codegen-units = 1
debug = true
lto = true
