[workspace]
resolver = "2"
members = [
  "mdbook/src/03-setup",
  "mdbook/src/05-meet-your-software",
  "mdbook/src/06-hello-world",
  "mdbook/src/07-led-roulette",
  "mdbook/src/08-inputs-and-outputs",
  "mdbook/src/09-registers",
  "mdbook/src/11-uart",
  "mdbook/src/12-i2c",
  "mdbook/src/13-led-compass",
  "mdbook/src/14-punch-o-meter",
  "mdbook/src/15-interrupts",
  "mdbook/src/16-snake-game",
  "mdbook/src/appendix/3-mag-calibration",
  "mdbook/src/serial-setup",
]

[profile.release]
codegen-units = 1
debug = true
lto = true
