[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Wink Saville <wink@saville.com>",
    "Henk Oordt <hd@oordt.dev>",
]
edition = "2021"
name = "registers"
version = "0.2.0"

[dependencies]
cortex-m-rt = "0.7.5"
microbit-v2 = "0.15.1"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.nrf52833-hal]
version = "0.18.0"
features = ["rt"]
