[package]
name = "rtt-check"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"

[dependencies.nrf52833-pac]
version = "0.12.2"
features = ["cortex-m-rt"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]
