[package]
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
name = "i2c"
version = "0.1.0"

[dependencies]
microbit-v2 = "0.12.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
nb = "1.0.0"
heapless = "0.7.10"
lsm303agr = "0.2.2"
embedded-hal = "0.2.6"
