[package]
name = "uart"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
embedded-io = "0.7.1"
heapless = "0.9.2"
microbit-v2 = "0.16.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.serial-setup]
version = "0.1.0"
path = "../serial-setup"
