[package]
name = "led-compass"
version = "0.1.0"
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2021"

[dependencies]
microbit-v2 = "0.16.0"
cortex-m-rt = "0.7.5"
rtt-target = "0.6.2"
panic-rtt-target = "0.2.0"
lsm303agr = "1.1.0"
libm = "0.2.16"
embedded-hal = "1.0.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]
