[package]
name = "snake-game"
version = "0.1.0"
authors = ["Alan Bunbury <dev@bunburya.eu>"]
edition = "2021"

[dependencies]
microbit-v2 = "0.15.0"
cortex-m-rt = "0.7.3"
rtt-target = "0.5.0"
panic-rtt-target = "0.1.3"
heapless = "0.8.0"
tiny-led-matrix = "1.0.2"
embedded-hal = "1.0.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]
