[package]
name = "interrupts"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
critical-section = "1"
critical-section-lock-mut = "0.1"
microbit-v2 = "0.15"
panic-rtt-target = "0.1"
rtt-target = "0.5"


[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]
