[package]
name = "interrupts"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
critical-section = "1"
critical-section-lock-mut = "0.1"
embedded-hal = "1.0.0"
microbit-v2 = "0.16"
panic-rtt-target = "0.2"
rtt-target = "0.6"


[dependencies.cortex-m]
version = "0.7"
features = ["critical-section-single-core"]
